# avanza

./: LICENSE  struct01.cpp  struct02.cpp
m/coincidences/: Makefile  coincidences.cc
m/viewer/: CMakeLists.txt  viewer.cc
m/viewer/cla/: CMakeLists.txt
m/viewer/cla/src/: CLAcmdln.cc
m/viewer/include/: qN6kRootDataViewerCLA.hh
m/viewer/src/: qN6kRootDataViewerCLA.cc
mk/: CMakeLists.txt  class01.cpp  simple.cpp  simple.hpp
p/: .RData  .Rhistory  datos.py  datos_functions.py  offset-acqua.csv  offset-azul.csv  offset-naranja.csv  offset-rojo.csv  offset-uv.csv  offset-verde.csv  toma-acqua.csv  toma-azul.csv  toma-naranja.csv  toma-rojo.csv  toma-uv.csv  toma-verde.csv
r/: Functions.C  H2D_perf.C  RandonGen.C  ReadTXT.C  ajustes.C  arboles.C  archivos.C  canvas.C  script.C
r/e1/: CMakeLists.txt  example01.cpp
t3vr3/: VecR3.cpp  VecR3.hpp  class03.cpp
tarea1/: adm02.cpp  array01.cpp  hola  inter.cpp  pointer.cpp  sizes.cpp
tarea1.1/: adm01.cpp  array02.cpp  class01.cpp  persona.cpp  persona.hpp  simple.cpp  simple.hpp  struct03.cpp
tareaII.3/: VecR2.cpp  VecR2.hpp  class03.cpp
